修改baseURL，增加标签、分类、归档，显示文章Toc，显示中文
另小修小改

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,14 @@
-baseURL = 'https://ficn-blog.pages.dev/'
+baseURL = 'https://blog.fnicen.top/'
 title = "FICN's blog"
 theme = 'PaperMod'
 pagination.pagerSize = 5
+
+[taxonomies]
+tag = "tags"
+category = "categories"
+
+[params]
+ShowCodeCopyButtons = true
 
 [params.profileMode]
 enabled = true
@@ -9,8 +16,11 @@ title = "FICN的博客"
 subtitle = "欢迎"
 
 [[params.profileMode.buttons]]
-name = "发布"
+name = "最新"
 url = "/posts"
+[[params.profileMode.buttons]]
+name = "分类"
+url = "/categories"
 [[params.profileMode.buttons]]
 name = "归档"
 url = "/archives"
