自建计数服务，取消显示阅读时长
估算阅读时长的算法一点都不科学

--- a/hugo.toml
+++ b/hugo.toml
@@ -10,7 +10,7 @@ category = "categories"
 
 [params]
 ShowCodeCopyButtons = true
-ShowReadingTime = true
+# ShowReadingTime = true
 
 [params.profileMode]
 enabled = true
