修复多行公式不能正确显示的问题
博客文章更新

--- a/hugo.toml
+++ b/hugo.toml
@@ -65,4 +65,13 @@ url = "https://github.com/FnICeN"
     weight = 5
 
 
-
+[markup.goldmark.extensions.passthrough]
+      enable = true
+      delimiters.block = [
+        ["\\[", "\\]"],
+        ["$$", "$$"]
+      ]
+      delimiters.inline = [
+        ["\\(", "\\)"],
+        ["$", "$"]
+      ]
