--- a/hugo.toml
+++ b/hugo.toml
@@ -63,6 +63,10 @@ url = "https://github.com/FnICeN"
     name = "关于"
     url = "/about"
     weight = 5
+  [[menu.main]]
+    name = "标签"
+    url = "/tags"
+    weight = 6
 
 
 [markup.goldmark.extensions.passthrough]
